v73
    - Change text detection
    - Change wordModel1
    - Add mod_ppmd/chart model back (-x option)

v72
    - Change StationaryMap, StateMap
    - Change jpegModel
    - Change wordModel1
    - remove wavModel
    - added audio8, audio16

v71
    - small change in im8 compression
    - reduce compression loss in v70
v70
    - Change StationaryMap
    - Change im24 model, compresses faster.
    - detect tiff change
v69
    -Online wrt is present and fixed, now actually decodes word if code
      is larger then 1 byte.
    -WordModel form paq8px_v182
      this one is not active in any models, you have to manually add it
      in source. Replaced in model array with blankmodel for now.
      Online wrt is needed so one can detect presence of BT and ET 
      for pdf mode in new WordModel.
    -Combined models into arrays to ease mixer inputs/sets/context clutter,
      let models to return usage.
    -Colored console (Windows only!), based on type stream.
    -JPEG compress improvment (APM), small gain.
    -Detect LZW in PDF and ad to CMP stream.

v68
    -update im8Mode,im24model,exemodel from paq8px_179
    -compressed stream /MZIP,EOL,ZLIB fail/
    -linearPredictionModel from paq8px_179
    -add charModel into wordModel paq8px_179

v67
    -revert ContextMap mix
    -change wordModel
    -in bypass update models
    -change distanceModel, indirectModel, exeModel
    -in default predictor resume bypass after 0x2000 bytes if predict miss found
     insted default bypass match lenght of 0xfff bytes
    -compressed data stream, still compressed but faster (eol data for now)
    -memory usage tweak to the same level as v64

v66
    -some arch compiler fixes for mmx,ssse3,avx2
    -contextMap SIMD change, more speed :D
    -matchModel bypass in all streams
    -add MJPEG context in jpegModel, use min 256 byte match for bypass
    -change BHMap in jpegModel, now does actual compression
    -min bypass in image8/24 models is width